--- a/main.css
+++ b/main.css
@@ -7,3 +7,30 @@ body{
     background-color: ghostwhite;
     font-family: sans-serif;
 }
+h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top:30px;
+    margin-bottom: 15px;
+
+}
+.menu{
+    display: flex;
+    justify-content:flex-end;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(197, 19, 197);
+    width: 100%;
+    height: 60px;
+    
+
+}
+.menu ul li{
+    list-style: none;
+    display:inline-block;
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    margin-right: 15px;
+}
