--- a/main.css
+++ b/main.css
@@ -46,3 +46,12 @@ article p{
     margin-left: 30px;
     font-style: italic;
 }
+footer{
+    background-color: rgb(197, 19, 197);
+    color: white;
+    width: 100%;
+    padding: 1em 0;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+}
